--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -34,6 +34,9 @@ on:
         required: false
         type: boolean
         default: false
+  release:
+    # Trigger when a GitHub Release is created/published by Release Please
+    types: [published, released]
 
 permissions:
   contents: read
@@ -44,7 +47,9 @@ env:
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
   DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
   DOCKER_NAMESPACE: ${{ vars.DOCKER_NAMESPACE }}
-  IMAGE_PREFIX: ${{ inputs.image_prefix }}
+  IMAGE_PREFIX: ${{ github.event_name == 'workflow_dispatch' && inputs.image_prefix || 'opentelemetry-ebpf-' }}
+  RELEASE_TYPE: ${{ github.event_name == 'workflow_dispatch' && inputs.release_type || 'public' }}
+  DRY_RUN: ${{ github.event_name == 'workflow_dispatch' && inputs.dry_run || 'false' }}
 
 jobs:
   build-and-release:
@@ -56,7 +61,7 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.ref || github.event.release.tag_name }}
           fetch-depth: 0
           submodules: false
           path: src
@@ -75,7 +80,7 @@ jobs:
           git_short_hash=$(git rev-parse --short=8 HEAD)
           short_version_number="${EBPF_NET_MAJOR_VERSION}.${EBPF_NET_MINOR_VERSION}"
           full_version_number="${EBPF_NET_MAJOR_VERSION}.${EBPF_NET_MINOR_VERSION}.${EBPF_NET_PATCH_VERSION}"
-          if [[ "${{ inputs.release_type }}" == "public" ]]; then
+          if [[ "${RELEASE_TYPE}" == "public" ]]; then
             github_tag=v${full_version_number}
           else
             github_tag=v${full_version_number}-${git_short_hash}
@@ -89,8 +94,9 @@ jobs:
         run: |
           echo "github.workspace = ${{ github.workspace }}"
           echo "github.ref = ${{ github.ref }}"
-          echo "inputs.image_prefix = ${{ inputs.image_prefix }}"
-          echo "inputs.dry_run = ${{ inputs.dry_run }}"
+          echo "release_type = ${RELEASE_TYPE}"
+          echo "image_prefix = ${IMAGE_PREFIX}"
+          echo "dry_run = ${DRY_RUN}"
           echo "git_short_hash = ${git_short_hash}"
           echo "short_version_number = ${short_version_number}"
           echo "full_version_number = ${full_version_number}"
@@ -145,11 +151,11 @@ jobs:
             out/opentelemetry-ebpf-*.deb
       - name: Upload packages to Release
         uses: softprops/action-gh-release@5be0e66d93ac7ed76da52eca8bb058f665c3a5fe
-        if: ${{ !inputs.dry_run }}
+        if: ${{ env.DRY_RUN != 'true' }}
         with:
-          tag_name: ${{ env.github_tag }}
-          target_commitish: ${{ inputs.ref }}
-          prerelease: ${{ inputs.release_type != 'public' }}
+          tag_name: ${{ github.event_name == 'workflow_dispatch' && env.github_tag || github.event.release.tag_name }}
+          target_commitish: ${{ github.event_name == 'workflow_dispatch' && inputs.ref || github.event.release.tag_name }}
+          prerelease: ${{ env.RELEASE_TYPE != 'public' }}
           files: |
             out/opentelemetry-ebpf-*.rpm
             out/opentelemetry-ebpf-*.deb
@@ -157,7 +163,7 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE/src
 
-          if [[ "${{ inputs.release_type }}" == "public" ]]; then
+          if [[ "${RELEASE_TYPE}" == "public" ]]; then
             tags=(
               latest
               latest-v${short_version_number}
@@ -189,7 +195,7 @@ jobs:
 
             for tag in ${tags[@]}; do
               docker tag localhost:5000/$image ${image_path}:${tag}
-              if [[ "${{ inputs.dry_run }}" == "false" ]]; then
+              if [[ "${DRY_RUN}" == "false" ]]; then
                 docker push ${image_path}:${tag}
               fi
             done
