fix(deb/rpm): fix package build for release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ project(
   VERSION ${EBPF_NET_MAJOR_VERSION}.${EBPF_NET_MINOR_VERSION}.${EBPF_NET_PATCH_VERSION}
 )
 
+include(GNUInstallDirs)
+
 list(
   APPEND
   CMAKE_MODULE_PATH
