again fix version file for release please

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -23,10 +23,7 @@
       "release-type": "simple",
       "changelog-path": "CHANGELOG.md",
       "extra-files": [
-        {
-          "type": "plain-text",
-          "path": "VERSION"
-        }
+        "VERSION"
       ]
     }
   }
