use "version-file" for release-please

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -22,9 +22,7 @@
     ".": {
       "release-type": "simple",
       "changelog-path": "CHANGELOG.md",
-      "extra-files": [
-        "VERSION"
-      ]
+      "version-file": "VERSION"
     }
   }
 }
